[package]
name = "qrmi-example-config"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/qiskit-community/spank-plugins"
rust-version = "1.86" # Keep in sync with docs/client/*.md and rust-toolchain.toml.


[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
env_logger = "0.11.7"
qrmi = { workspace = true }
