[package]
name = "delete_job"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Qiskit/direct-access-client"
license = "Apache-2.0"

[dependencies]
direct-access-api = { workspace = true }
retry-policies = "0.4.0"
tokio = { version = "1.40.0", features = ["full"] }
env_logger = "0.11.5"
serde_json = "1.0"
clap = { version = "4.5.20", features = ["derive"] }
